test/libyul/yulSyntaxTests/objects/incomplete2.yul
object "A" {
  code {}
}

object
// ----
// ParserError 2314: (26-32): Expected end of source but got identifier
